# aiTOB

./: .dockerignore  .env.example  .env.template  .gitignore  .pids.json  001move to react.md  002move to react.md  AGENTS.md  Dockerfile  benchmark.py  docker-compose.yml  populate_dummy.py  pyproject.toml  requirements.txt  run.py  stop.py  test_startgg.py  wipe_dummy.py
.specify/: Plan.md  feature.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
Design/: Untitled-1.ai
Design/1x/: fnc-tournament-hub.html  gemini-code-1778265712212.html
backend/api/: auth.py  main.py  overlay_config.json  schemas.py  ws_manager.py
backend/bot/: __init__.py  main.py  match_threads.py  messages.py  registration.py
backend/core/: database.py  database.sqlite  database_schema.py  image_utils.py  match_state.py  models.py  score_reporting.py  startgg_client.py
backend/tests/: conftest.py  (+17 more)
docs/: workflows.html  workflows.json  workflows.md
frontend-react/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
mds/: 01_Core_and_Database.md  02_Pools_Agent_LangGraph.md  03_Stream_Dashboard_OBS.md  04_overlay.md  05_Tournament_Hub.md  07_StartAndStop.md  08Full Control & Deployment.md  09.md  1st prompt.md  Bot_Interactions_and_Commands.md
scratch/: all_mds.txt  check_args.py  check_images.py  check_schema.py  check_types.py  test_api.py  test_startgg_fetch.py
(+105 files in other folders)
