[project]
name = "ai-tournament-organizer"
version = "0.1.0"
description = "AI-powered tournament organizer with Discord and Start.gg integration"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "discord.py>=2.4.0",
    "aiosqlite>=0.20.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "psutil>=6.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "google-generativeai>=0.8.0",
    "python-multipart>=0.0.18",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["backend"]


